MOPP-159 - tabbar navigation flow concept.

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -1,2 +1,5 @@
 
-"test_string" = "DemoViewController EN";
+"tab-signing" = "Signing";
+"tab-signed" = "Signed";
+"tab-my-eid" = "My eID";
+"tab-sim-settings" = "SIM settings";
