Act on card reader status changes

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -3,3 +3,10 @@
 "tab-signed" = "Signed";
 "tab-my-eid" = "My eID";
 "tab-sim-settings" = "SIM settings";
+"my-eid-id-card-info" = "ID-kaart on riigi sisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel.";
+"my-eid-warning-card-not-found" = "ID card is missing\n\nPlease check if ID card in inserted correctly. New ID cards have chip on the back side of the card.";
+"my-eid-warning-reader-not-found" = "Card reader is not connected.";
+"my-eid-personal-code" = "Personal Code:";
+"my-eid-birth" = "Birth:";
+"my-eid-citizenship" = "Citizenship:";
+"my-eid-email" = "E-mail:";
