Added sections for card info and certificate

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -1,2 +1,3 @@
 
 "test_string" = "DemoViewController RU";
+"my-eid-id-card-info-link" = "https://www.politsei.ee/ru/teenused/isikut-toendavad-dokumendid/id-kaart/taiskasvanule/";
