--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 "tab-my-eid" = "Minu eID";
 "tab-sim-settings" = "SIM'i toimingud";
 "my-eid-id-card-info" = "ID-kaart on riigi sisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel. %@";
-"my-eid-warning-card-not-found" = "ID-kaart ei ole lugejas või puudub.\n\nKontrolli, kas ID-kaart on õiget pidi lugejas Uutel ID-kaartidel on kiip kaardi tagumisel küljel.";
+"my-eid-warning-card-not-found" = "ID-kaarti ei leitud.\n\nKontrolli, kas ID-kaart on õiget pidi lugejas. Uutel ID-kaartidel on kiip kaardi tagumisel küljel.";
 "my-eid-warning-reader-not-found" = "Kaardilugeja ei ole ühendatud.\n\nKontrolli kas lugeja on sisse lülitatud ja vali see %@";
 "my-eid-tap-here" = "vajutades siia";
 "my-eid-find-more-info" = "Lisainfot loe siit";
@@ -18,7 +18,7 @@
 "my-eid-valid-until" = "Kehtiv kuni:";
 "my-eid-use-count" = "Kasutatud:";
 "my-eid-validity" = "Kehtivus:";
-"my-eid-valid" = "Kehtiv ja kasutatav";
+"my-eid-valid" = "Kehtiv";
 "my-eid-not-valid" = "Kehtetu";
 "my-eid-valid-until" = "Kehtib kuni:";
 "my-eid-personal-data" = "Isikuandmed";
