--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -28,4 +28,7 @@
 "my-eid-signature-certificate" = "Allkirjastamise sertifikaat";
 "my-eid-my-eid" = "Minu eID";
 "my-eid-id-card-info-link" = "https://www.politsei.ee/et/teenused/isikut-toendavad-dokumendid/id-kaart/taiskasvanule/";
-
+"pin-actions-change-pin-1" = "Muuda PIN 1";
+"pin-actions-change-pin-2" = "Muuda PIN 2";
+"pin-actions-unblock-pin-1" = "Lukusta lahti PIN 1";
+"pin-actions-unblock-pin-2" = "Lukusta lahti PIN 2";
