--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -7,6 +7,8 @@
 "tab-my-eid" = "Minu eID";
 "tab-sim-settings" = "SIM'i toimingud";
 
+// *** Actions ***
+"action-ok" = "OK";
 
 // *** Create container ***
 
@@ -55,3 +57,17 @@
 "pin-actions-change-pin-2" = "Muuda PIN 2";
 "pin-actions-unblock-pin-1" = "Lukusta lahti PIN 1";
 "pin-actions-unblock-pin-2" = "Lukusta lahti PIN 2";
+
+// *** PIN actions ***
+"pin-actions-pin1" = "PIN1";
+"pin-actions-pin2" = "PIN2";
+"pin-actions-puk" = "PUK";
+"pin-actions-change-pin" = "Muuda %@";
+"pin-actions-unblock-pin" = "Tühista %@ blokeering";
+"pin-actions-changing-pin" = "%@ muutmine";
+"pin-actions-unblocking-pin" = "%@ blokeeringu tühistamine";
+"pin-actions-current-pin" = "Kehtiv %@ kood";
+"pin-actions-new-pin" = "Uus %@ kood";
+"pin-actions-repeat-pin" = "Uus %@ kood uuesti";
+"pin-actions-rules-title" = "Reeglid";
+"pin-actions-rules-PIN1" = "* Uus PIN1 peab olema erinev eelmisest.\n\n* Uus PIN1 peab olema 4-12 - numbriline ega tohi sisaldada tähti.\n\n* Uus PIN1 ei saa olla 0000, 1234, ega tohi osaliselt ega täielikult kattuda sinu isikukoodiga.";
