--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -6,9 +6,12 @@
 "tab-signed" = "Allkirjastatud";
 "tab-my-eid" = "Minu eID";
 "tab-sim-settings" = "SIM'i toimingud";
+"tab-settings" = "Sätted";
 
 
-// *** Create container ***
+// *** Signing ***
+"signing-container-name-placeholder" = "Konteineri nimi";
+"signing-create-container-button" = "Loo konteiner";
 
 
 // *** Signed containers ***
