--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -67,3 +67,15 @@
 "pin-actions-repeat-pin" = "Repeat new %@ code";
 "pin-actions-rules-title" = "Rules";
 "pin-actions-rules-PIN1" = "* New PIN1 must be different from previous PIN1.\n\n* New PIN1 must be 4-12 digits long.\n\n* New PIN1 can't be 0000, 1234, or contain your personal id code.";
+"pin-actions-rules-PIN2" = "* New PIN2 must be different from previous PIN2.\n\n* New PIN2 must be 5-12 digits long.\n\n* New PIN2 can't be 00000, 12345, or contain your personal id code.";
+"pin-actions-info" = "Here you can change your PIN codes and unblock them if needed. PIN operations need card reader to be connected to your phone.";
+"pin-actions-general-error" = "Could not change %@";
+"pin-actions-incorrect-length" = "New %@ has incorrect length.";
+"pin-actions-same-as-current" = "New %@ must be different from current %@.";
+"pin-actions-invalid-format" = "New %@ has invalid format.";
+"pin-actions-wrong-pin-retry" = "Current %@ was wrong. You have %i tries left.";
+"pin-actions-wrong-pin-blocked" = "Current %@ was wrong. %@ has been blocked.";
+"pin-actions-error-title" = "Error";
+"pin-actions-success-title" = "PIN action was successful";
+"pin-actions-success-pin-changed" = "%@ has been changed.";
+"pin-actions-success-pin-unblocked" = "%@ has been changed and unblocked.";
