Moved pin blocked message to pin operations view

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -58,8 +58,6 @@
 "my-eid-signature-certificate" = "Allkirjastamise sertifikaat";
 "my-eid-my-eid" = "Minu eID";
 "my-eid-id-card-info-link" = "https://www.politsei.ee/et/teenused/isikut-toendavad-dokumendid/id-kaart/taiskasvanule/";
-"my-eid-pin-blocked" = "%@ on blokeeritud. %@ blokeeringu saad tühistada %@.";
-"my-eid-pin-actions-view" = "PIN'i toimingute vaates";
 
 // *** PIN actions ***
 "pin-actions-change-pin-1" = "Muuda PIN 1";
@@ -97,3 +95,4 @@
 "pin-actions-verification-option" = "Kasutades kehtivat %@ koodi";
 "pin-actions-unblocking-pin" = "%@ blokeeringu tühistamine:";
 "pin-actions-repeated-pin-doesnt-match" = "Uus %@ ja uus %@ uuesti on erinevad";
+"pin-actions-pin-blocked" = "%@ on blokeeritud.";
