--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -58,8 +58,6 @@
 "my-eid-signature-certificate" = "Signature certificate";
 "my-eid-my-eid" = "My eID";
 "my-eid-id-card-info-link" = "https://www.politsei.ee/en/teenused/isikut-toendavad-dokumendid/id-kaart/taiskasvanule/";
-"my-eid-pin-blocked" = "%@ is blocked. You can unblock %@ in %@.";
-"my-eid-pin-actions-view" = "PIN actions view";
 
 
 // *** PIN actions ***
@@ -92,3 +90,4 @@
 "pin-actions-verification-option" = "Using current %@ code";
 "pin-actions-unblocking-pin" = "Unblocking %@:";
 "pin-actions-repeated-pin-doesnt-match" = "New %@ and repeated %@ are different.";
+"pin-actions-pin-blocked" = "%@ is blocked.";
