MOPP-176 - localize tableView edit action and each row delete buttons.

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -10,6 +10,8 @@
 // *** Actions ***
 "action-ok" = "OK";
 "action-cancel" = "Cancel";
+"action-delete" = "Delete";
+"action-edit" = "Edit";
 
 
 // *** Signed containers ***
