MOPP-190 - added settings framework with some default settings items.

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -94,3 +94,7 @@
 "pin-actions-verification-option" = "Using current %@ code";
 "pin-actions-unblocking-pin" = "Unblocking %@:";
 "pin-actions-repeated-pin-doesnt-match" = "New %@ and repeated %@ are different.";
+
+
+// *** Settings ***
+"settings-new-container-format" = "New container format";
