--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -15,6 +15,8 @@
 
 
 // *** Signed containers ***
+// General
+"no-containers-cell-title" = "No containers found";
 // List
 "containers-list-search-placeholder" = "Search";
 "containers-list-section-header-unsigned" = "Unsigned";
