--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -15,6 +15,8 @@
 
 
 // *** Signed containers ***
+// General
+"no-containers-cell-title" = "Dokumendid puuduvad";
 // List
 "containers-list-search-placeholder" = "Otsi";
 "containers-list-section-header-unsigned" = "Allkirjastamata";
