--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -38,6 +38,7 @@
 "container-details-general-error" = "Allkirjastamine ebaõnnestus.";
 "container-details-signing-success" = "Allkirjastamine õnnestus";
 "container-details-signature-added" = "Sinu allkiri on dokumendile lisatud.";
+"container-details-signature-already-exists" = "Sinu allkiri on sellel dokumendil juba olemas.";
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-kaart on riigi sisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel. %@";
