Localize version title label

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -110,3 +110,5 @@
 
 // *** Settings ***
 "settings-new-container-format" = "Uue dokumendi formaat";
+"settings-application-version" = "Versioon";
+
