MOPP-204: SOAP request to DDS and response parsing along with UI flow

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -41,6 +41,15 @@
 "container-details-signing-success" = "Allkirjastamine õnnestus";
 "container-details-signature-added" = "Sinu allkiri on dokumendile lisatud.";
 "container-details-signature-already-exists" = "Sinu allkiri on sellel dokumendil juba olemas.";
+"container-signing-method-alert-title" = "Allkirjastamise meetod";
+"container-signing-method-alert-message" = "Vali allkirjastamise meetod";
+"container-signing-method-mobile-id" = "Mobiil ID";
+"container-signing-method-id-card" = "ID kaart";
+"container-idcode-phone-alert-title" = "Sisesta andmed";
+"container-idcode-phone-alert-message" = "Sisesta isikukood ja telefoninumber";
+"container-idcode-phone-alert-idcode-placholder" = "Isikukood";
+"container-idcode-phone-alert-phonenumber-placholder" = "Telefoninumber";
+
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-kaart on riigi sisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel. %@";
