--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -41,6 +41,17 @@
 "container-details-signing-success" = "Signature added";
 "container-details-signature-added" = "Your signature has been added to the document.";
 "container-details-signature-already-exists" = "Your signature already exists on this document.";
+"container-signing-method-alert-title" = "Singing method";
+"container-signing-method-alert-message" = "Choose signing method";
+"container-signing-method-mobile-id" = "Mobile ID";
+"container-signing-method-id-card" = "ID card";
+"container-idcode-phone-alert-title" = "Enter details";
+"container-idcode-phone-alert-message" = "Enter ID code and phone number";
+"container-idcode-phone-alert-idcode-placholder" = "ID code";
+"container-idcode-phone-alert-phonenumber-placholder" = "Phone number";
+
+
+
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-kaart on riigi sisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel. %@";
