Mobile ID flow in progress

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -124,3 +124,8 @@
 // *** About ***
 "about-development" = "Software ordered by RIA, developed by Mobi Lab";
 "about-dependencies" = "Additional dependencies";
+
+
+// *** Mobile ID Challenge View ***
+
+"challenge-code-label" = "Code: %@";
