--- a/MoppLib/et.lproj/Localizable.strings
+++ b/MoppLib/et.lproj/Localizable.strings
@@ -1,4 +1,18 @@
 
+// *** Actions ***
+"action-ok" = "OK";
+"action-cancel" = "Tühista";
+
+// *** PIN actions ***
+"pin-actions-pin1" = "PIN1";
+"pin-actions-pin2" = "PIN2";
+"pin-actions-puk" = "PUK";
+
+"container-details-enter-pin1" = "Palun sisesta PIN1 kood.";
+"container-details-enter-pin2" = "Palun sisesta PIN2 kood.";
+"container-details-enter-puk" = "Palun sisesta PUK kood.";
+"pin-actions-wrong-pin-retry" = "Kehtiv %@ on vale. Saad proovida veel %i korda.";
+
 "Select reader" = "Vali kaardilugeja";
 "Cancel" = "Katkesta";
 "Connect reader message" = "Kaardilugeja ei ole ühendatud. Palun kontrolli, et lugeja oleks aktiivne ja vali lugeja.";
