--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -59,6 +59,9 @@
 "container-details-phone-number-error-alert-title" = "Telefoninumbri viga";
 "container-details-phone-number-error-alert-message" = "Oled sisestanud mitte korrektse telefoni numbri. Palun kontrolli numbrit";
 "container-details-pin-not-provided" = "Allkirjastamiseks on vajalik kasutaja tuvastamine PIN koodiga.";
+"container-details-signature-already-exists-alert-title" = "Allkiri eksisteerib";
+"container-details-signature-already-exists-alert-message" = "Dokument on sinu poolt juba allkirjastatud. Kas soovid jätkata ?";
+
 
 
 // *** My eID ***
